Fixed #218 - Reduce Compiler Warnings Java 11